Fixed spacing of images and text  on splashpage
to make them more dynamic

--- a/website/css/frozen/splashpage.css
+++ b/website/css/frozen/splashpage.css
@@ -37,7 +37,6 @@
 
 .splashpage_list_img {
 	float: left;
-	padding-right: 12px;
 	padding-bottom: 12px;
 }
 
